# voyn_ragz

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: data-pipeline.mdc  database.mdc  project.mdc
volyn_ragz/: __init__.py  __main__.py  cli.py  counties.json  counties.py  db.py  image_prep.py  train_trocr.py
volyn_ragz/ocr/: __init__.py  gemini_engine.py  trocr_engine.py
